--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-validator": "^6.14.2",
     "nodemon": "^2.0.20",
     "sequelize": "^6.25.3",
     "sqlite": "^4.1.2",
